--- a/starter/package.json
+++ b/starter/package.json
@@ -2,6 +2,7 @@
   "name": "script",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^15.0.3",
     "prisma": "2.22.1",
     "ts-node": "9.1.1",
     "typescript": "4.2.3"
